Closed Bug 1556103 Opened 5 years ago Closed 5 years ago

Long pressing in input form opens keyboard instead of the PASTE menu

Categories

(GeckoView :: IME, defect, P1)

All
Android
defect

Tracking

(firefox-esr60 wontfix, firefox-esr68 wontfix, firefox67 wontfix, firefox67.0.1 wontfix, firefox68 wontfix, firefox69 fixed)

RESOLVED FIXED
mozilla69
Tracking Status
firefox-esr60 --- wontfix
firefox-esr68 --- wontfix
firefox67 --- wontfix
firefox67.0.1 --- wontfix
firefox68 --- wontfix
firefox69 --- fixed

People

(Reporter: cpeterson, Assigned: m_kato)

References

()

Details

(Keywords: parity-chrome, Whiteboard: [geckoview:fenix:m7])

Attachments

(2 files)

STR

  1. Load https://mullvad.net/en/account/login/ in Fennec or Fenix.
  2. Long press in the "Account number" input form.

Expected Behavior

When I long press in the input form in Chrome, I get the "PASTE" menu and no keyboard.

Actual Behavior

If I long press in the input form in Fennec or Fenix, I see a "PASTE | SELECT ALL" menu flash open for a moment, then close as the keyboard opens. With the keyboard open, I can then long press a second time to open the "PASTE | SELECT ALL" menu again.

P3 because this is not a regression compared to Fennec.

This bug was originally filed in the Fenix issue tracker:
https://github.com/mozilla-mobile/fenix/issues/2590

I guess, AccessibleCaretManager calls FocusManager::SetFocus with nsIFocusManager::FLAG_BYMOUSE. So UserMightRequestOpenVKB doesn't know whether this action is longpress. We have to define new flag such as nsIFocusManager::FLAG_BYLONGPRESS.

Assignee: nobody → m_kato

I'm upgrading this bug from priority P3 to P1 for the next Fenix milestone (M7). The Fenix team rated this issue as a P1.

68=wontfix because we don't need to uplift this fix to GV 68. This fix can ride the trains in GV 69.

https://github.com/mozilla-mobile/fenix/issues/2590

Priority: P3 → P1
Whiteboard: [geckoview:fenix:p3] → [geckoview:fenix:m7]
Pushed by m_kato@ga2.so-net.ne.jp:
https://hg.mozilla.org/integration/autoland/rev/88e9ed06620e
Part 1. Add long press action when setting focus. r=masayuki
https://hg.mozilla.org/integration/autoland/rev/a19e2249b857
Part 2. Long press doesn't show virtual keyboard. r=geckoview-reviewers,snorp
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
See Also: → 1574987

Moving some keyboard bugs to the new GeckoView::IME component.

Component: General → IME
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: